cli/hypercode-rs/tui2/src/chatwidget/snapshots/hypercode_tui2__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui2/src/chatwidget/tests.rs
assertion_line: 1758
expression: popup
---
  Select Model and Effort
  Access legacy models by running hypercode -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
