cli/hypercode-rs/tui2/src/chatwidget/snapshots/hypercode_tui2__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Approaching rate limits
  Switch to gpt-5.1-codex-mini for lower credit usage?

› 1. Switch to gpt-5.1-codex-mini           Optimized for hypercode. Cheaper,
                                            faster, but less capable.
  2. Keep current model
  3. Keep current model (never show again)  Hide future rate limit reminders
                                            about switching models.

  Press enter to confirm or esc to go back
